2000-12-02  Roland McGrath  <roland@frob.com>

	* inode.c (write_all_disknodes): Call diskfs_set_node_times after
	pokel_sync, since it might delay a little.
	(write_node): Remove assert that dn_set_mtime et al are clear.
	It is ok if they are set in parallel, because the latter setting
	will be carried out eventually.

2000-10-01  Roland McGrath  <roland@frob.com>

	* truncate.c (diskfs_truncate): Use & instead of %.

2000-11-30  Marcus Brinkmann  <marcus@gnu.org>

	* dir.c (diskfs_lookup_hard): If name is too long, clear
	DS before returning ENAMETOOLONG.

2000-10-01  Roland McGrath  <roland@frob.com>

	* inode.c (write_node): Use memcpy instead of a loop.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-07-26  Marcus Brinkmann  <marcus@gnu.org>

	* truncate.c (trunc_indirect): Add missing argument to
	pager_flush_some.

2000-07-25  Thomas Bushnell, BSG  <tb@mit.edu>

	* truncate.c (trunc_indirect): Before freeing an indirect block,
	remove it from the disk pager's kernel cache.

2000-03-09  Roland McGrath  <roland@baalperazim.frob.com>

	* balloc.c (ext2_free_blocks, ext2_new_block): Fix formats to avoid
	-Wformat warnings.
	* getblk.c (ext2_alloc_block, inode_getblk, ext2_getblk): Likewise.
	* ialloc.c (ext2_count_free_inodes): Likewise.
	* truncate.c (trunc_direct): Likewise.
	* pager.c (pending_blocks_write, diskfs_grow): Likewise.

2000-03-03  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (diskfs_get_directs): Don't allocate buffer for *DATA until
	after scanning for ENTRY and possibly returning EOF.

2000-02-05  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2_fs.h: Update from Linux 2.3.42 version (ext2_fs_i.h unchanged).
	* inode.c (check_high_bits): In accordance with Linux 2.3.42 behavior,